src/test/resources/com/github/sblundy/elvish/highlighting/ns-command-no-use.elv
<error descr="Namespace 'str:' is not imported">str:</error>join "-" ["x" "y"]